--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,24 @@
         android:theme="@style/Theme.Anahuac"
         tools:targetApi="31">
         <activity
+            android:name=".ExamenLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".AlertActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ListCampusActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RecyclerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GameActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginNetflixActivity"
             android:exported="false" />
         <activity
